--- a/package.json
+++ b/package.json
@@ -4,12 +4,24 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && tsc --project tsconfig.build.json",
+    "build:force": "next build --no-lint && npx tsc --project tsconfig.build.json",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:all": "npx ts-node --project tsconfig.node.json scripts/runAllTests.ts",
+    "test:http": "npx ts-node --project tsconfig.node.json scripts/testHttpApi.ts",
+    "mcp": "ts-node --project tsconfig.node.json mcp/server.ts",
+    "mcp:dist": "node dist/mcp/server.js",
+    "sync:shopify": "ts-node --project tsconfig.node.json scripts/syncShopify.ts",
+    "dedupe:shopify": "ts-node --project tsconfig.node.json scripts/dedupeShopify.ts",
+    "goose:profile": "ts-node --project tsconfig.node.json scripts/goose-profile.ts",
+    "mcp:smoke": "node dist/scripts/mcpSmoke.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.54.0",
+    "@modelcontextprotocol/sdk": "^1.1.0",
+    "@supabase/supabase-js": "^2.49.1",
+    "dotenv": "^16.4.7",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -17,12 +29,18 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "jest": "^29.7.0",
     "tailwindcss": "^4",
+    "ts-jest": "^29.2.6",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
